Jquery added to allow todo app

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="https:googleapis.com/css?family=Open+Sans">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+	<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
 
 </head>
 
@@ -21,13 +22,47 @@
 </div>
 
 	<div class="settings" id="settings">
-		<form action="#" class="name-form" id="name-form">
-<input class="name-input" type="text" id="name-input" placeholder="Type your name here...">
-        			<input type="submit" class="name-button" value="Add name">
+		<h3> Setting Pane</h3>
+		<ol>
+			<li>
+				<form action="#" class="name-form" id="name-form">
+		<input class="name-input" type="text" id="name-input" placeholder="Type your name here...">
+        <input type="submit" class="name-button" value="Add name">
 		</form>
+			</li>
+			<li>
+				Anpd
+			</li>
+		</ol>
+		
 	</div>
 
-<!-- to do app to be fixed later -->
+<!-- Beginning of Todo App -->
+
+		<div class="task-wrapper">	
+
+			<div class="tasklist">
+					<ul class="task-lists">
+						<li></li>
+					</ul>
+			</div>
+
+			<div class="completedtask">
+				<h2> Drag completed task to this place here</h2>
+			</div>
+
+		</div>
+		
+		<div class="todoApp">	
+			<form class="todo">
+			<input type="text" name="" class="input"> <span class="add">Add task</span>
+
+		</form>
+
+
+		</div>
+
+<!-- End of todo App -->
 
 
 
