Todo App been updated, draggable and sortable library to be added

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 	<span class="btn-weather" id="timing" class="date"> time</span>
 
 	<div class="greeting-container">
-		<h4  class="greeting" id="time-of-day"></h4>
-   <h4 class="greeting" id="greeting"></h4>
+		<h2  class="greeting" id="time-of-day"></h2>
+   <h2 class="greeting" id="greeting"></h2>
 </div>
 
 	<div class="settings" id="settings">
@@ -42,8 +42,9 @@
 		<div class="task-wrapper">	
 
 			<div class="tasklist">
+				<h2>Tasks List</h2>
 					<ul class="task-lists">
-						<li></li>
+						
 					</ul>
 			</div>
 
@@ -54,10 +55,10 @@
 		</div>
 		
 		<div class="todoApp">	
-			<form class="todo">
+			
 			<input type="text" name="" class="input"> <span class="add">Add task</span>
 
-		</form>
+		
 
 
 		</div>
