Function to retrieve data from localstorage

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
 <head>
 	<title>Browser Launcher</title>
@@ -9,11 +9,8 @@
 	<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
 	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 	  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-	  	<!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
-	        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" 
-	        crossorigin="anonymous"></script>
-		<script src="touch-dnd.js"></script>
-	 -->
+	  	
+	 
 </head>
 
 
@@ -64,7 +61,7 @@
 		
 		<div class="todoApp">	
 			
-			<input type="text" name="" class="input" id="input1"> <span class="add" id="add">Add task</span>
+			<input type="text" class="input" id="input1"> <span class="add" id="add">Add task</span>
 
 		</div>
 
