List of features to be added to project

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body id="bod">
 	<button id="btn-settings" class="settings-opened"> Settings <i class="fa fa-cog"></i></button>
-	<button id="btn-weather" class="btn-weather">  <i class="fa fa-cloud"></i></button>
+	<button id="btn-weather" class="btn-weather">  <i class="fa fa-cloud"> </i></button>
 	<span class="btn-weather" id="timing" class="date"> time</span>
 
 	<div class="greeting-container">
@@ -63,6 +63,15 @@
 			
 			<input type="text" class="input" id="input1"> <span class="add" id="add">Add task</span>
 
+		</div>
+
+
+		<div class="editTask">
+			<div>
+				<input type="text" value=""> 
+				<button>Save Task</button>
+			</div>
+			
 		</div>
 
 <!-- End of todo App -->
